# fluoroseg

./: .gitignore  README.md  environment.yml  pyproject.toml
src/fluoroseg/alb/: build_aug.py  neglog.py  utils.py  window.py
src/fluoroseg/data/: base.py  dataset.py
src/fluoroseg/utils/: coco_utils.py  file_utils.py  json_utils.py  random.py  totalsegmentator_utils.py
